[package]
name = "saml11e16a-pac"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.6.13", optional = true }
vcell = "0.1.2"

[features]
rt = ["cortex-m-rt/device"]

saml11d14a = []
saml11d15a = []
saml11d16a = []
saml11e14a = []
saml11e15a = []
saml11e16a = []
